--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Simple quote page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  
 </head>
 <body>
-
+  <div class="szövegdoboz">
+    <p class="idézet">"The freedom of Mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</p>
+    <p class="szerző"><small>– Jean-Jacques Rousseau</small></p>
+  </div>
 </body>
 </html>
