add language buttons

--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
     <p class="idézet">"The freedom of Mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</p>
     <p class="szerző">– Jean-Jacques Rousseau</p>
   </div>
+  <div id="nyelv-választó"> 
+    <nav>
+      <a href="/html/">English</a>
+      <a href="/html/">Hungarian (magyar)</a>
+      <a href="/html/">French</a>
+      <a href="/html/">Spanish</a>
+    </nav>
+  </div>  
 </body>
 </html>
