add language html pages

--- a/index-esp.html
+++ b/index-esp.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="szövegdoboz">
-    <p class="idézet">"The freedom of Mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</p>
+    <p class="idézet">"La libertad de la humanidad no reside en el hecho de que podemos hacer lo que queremos, sino que no tenemos que hacer lo que no queremos."</p>
     <p class="szerző">– Jean-Jacques Rousseau</p>
   </div>
   <div id="nyelv-választó"> 
