--- a/index-fra.html
+++ b/index-fra.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="szövegdoboz">
-    <p class="idézet">"The freedom of Mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</p>
+    <p class="idézet">"La liberté de l'humanité ne réside pas dans le fait que nous pouvons faire ce que nous voulons, mais que nous n'avons pas à faire ce que nous ne voulons pas."</p>
     <p class="szerző">– Jean-Jacques Rousseau</p>
   </div>
   <div id="nyelv-választó"> 
