--- a/index-ger.html
+++ b/index-ger.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="szövegdoboz">
-    <p class="idézet">"The freedom of Mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</p>
+    <p class="idézet">"Die Freiheit der Menschheit liegt nicht in der Tatsache, dass wir tun können, was wir wollen, sondern dass wir nicht das tun müssen, was wir nicht wollen."</p>
     <p class="szerző">– Jean-Jacques Rousseau</p>
   </div>
   <div id="nyelv-választó"> 
