--- a/index-hun.html
+++ b/index-hun.html
@@ -9,16 +9,16 @@
 </head>
 <body>
   <div class="szövegdoboz">
-    <p class="idézet">"The freedom of Mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</p>
+    <p class="idézet">"Az emberiség szabadsága nem abban rejlik, hogy meg tudjuk csinálni, amit akarunk, hanem hogy nem kell tennünk azt, amit nem akarunk."</p>
     <p class="szerző">– Jean-Jacques Rousseau</p>
   </div>
   <div id="nyelv-választó"> 
     <nav>
-      <a href="index.html">English</a>
-      <a href="index-hun.html">Hungarian (magyar)</a>
-      <a href="index-fra.html">French</a>
-      <a href="index-esp.html">Spanish</a>
-      <a href="index-ger.html">German</a>
+      <a href="index.html">Angol</a>
+      <a href="index-hun.html">Magyar)</a>
+      <a href="index-fra.html">Francia</a>
+      <a href="index-esp.html">Spanyol</a>
+      <a href="index-ger.html">Német</a>
     </nav>
   </div>  
 </body>
