--- a/index-hun.html
+++ b/index-hun.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="szövegdoboz">
-    <p class="idézet">"Az emberiség szabadsága nem abban rejlik, hogy meg tudjuk csinálni, amit akarunk, hanem hogy nem kell tennünk azt, amit nem akarunk."</p>
+    <p class="idézet">"Az emberiség szabadsága nem abban rejlik, hogy meg tudjuk csinálni, amit akarunk, hanem hogy nem kell megtennünk azt, amit nem akarunk."</p>
     <p class="szerző">– Jean-Jacques Rousseau</p>
   </div>
   <div id="nyelv-választó"> 
